k8/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: appr-bg-asanchez
spec:
  type: LoadBalancer
  selector:
    app: site-app
  ports:
  - name: 8080tcp
    protocol: TCP
    port: 8080
    targetPort: 5000tcp
