k8/ingress.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: web-ingress
    namespace: appr-bg-asanchez
  spec:
    ingressClassName: nginx
    rules:
    - host: asanchez-portfolio.appr.drw
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: web-service
              port:
                number: 8080
    tls:
    - hosts:
      - asanchez-portfolio.appr.drw
      secretName: appr-drw-tls-cert
kind: List
metadata:
  resourceVersion: ""
